[gd_scene load_steps=6 format=3 uid="uid://sryf7l02uvf5"]

[ext_resource type="Script" uid="uid://cwkmtxuo0wl0r" path="res://microjuegos/microjuego_11.gd" id="1_gvrxd"]
[ext_resource type="Texture2D" uid="uid://djbc848ol8l40" path="res://fondos/fondo_micro11.jpeg" id="2_a48py"]
[ext_resource type="Texture2D" uid="uid://dt1gf37rnn5og" path="res://sprites/micro 11/doro.png" id="3_if4uh"]
[ext_resource type="Texture2D" uid="uid://ccyjngur8ffyb" path="res://sprites/micro 11/gato_panzon.png" id="4_khho4"]

[sub_resource type="Theme" id="Theme_jnxlv"]

[node name="juego gato" type="Node2D"]
script = ExtResource("1_gvrxd")

[node name="fondo" type="TextureRect" parent="."]
offset_left = -13.9999
offset_top = -3.0
offset_right = 1010.0
offset_bottom = 1021.0
scale = Vector2(1.8877, 1.05957)
texture = ExtResource("2_a48py")

[node name="muñeco" type="Sprite2D" parent="."]
position = Vector2(1350, 770)
scale = Vector2(0.456634, 0.442676)
texture = ExtResource("3_if4uh")

[node name="gato" type="Sprite2D" parent="."]
position = Vector2(597, 825)
scale = Vector2(0.478689, 0.362389)
texture = ExtResource("4_khho4")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="barra_vida" type="ProgressBar" parent="UI"]
modulate = Color(0.232333, 1, 0.06, 1)
self_modulate = Color(0.00999999, 1, 0.2575, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 3.75
anchor_top = 5.973
anchor_right = 3.75
anchor_bottom = 5.973
offset_left = -32.0
offset_top = -146.92
offset_right = 436.0
offset_bottom = 0.0800018
theme = SubResource("Theme_jnxlv")
theme_override_colors/font_color = Color(1, 0.0666667, 0, 1)
theme_override_colors/font_outline_color = Color(0.1911, 0.21, 0.21, 1)
theme_override_font_sizes/font_size = 100
value = 100.0

[node name="temporizador" type="Label" parent="UI"]
custom_minimum_size = Vector2(555, 0)
layout_mode = 0
offset_left = 1208.0
offset_top = 92.0
offset_right = 1997.0
offset_bottom = 291.0
theme_override_font_sizes/font_size = 90
text = "\"Tiempo:8\""

[node name="LabelTeclaActual" type="Label" parent="UI"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 0
offset_left = 407.0
offset_top = 239.0
offset_right = 1407.0
offset_bottom = 339.0
theme_override_font_sizes/font_size = 100
text = "\"¡Presiona una tecla!\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="TiempoJuego" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="timeout" from="TiempoJuego" to="." method="_on_tiempo_juego_timeout"]
